fixed random gap

--- a/WebDevProject/recipe_table.css
+++ b/WebDevProject/recipe_table.css
@@ -1,3 +1,7 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
 td, th {
     text-align: left;
     border-radius: 5%;
